# pyside2_demo

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/pyside2_demo/: __init__.py  __main__.py  common.py
src/pyside2_demo/backend/: compute.py
src/pyside2_demo/cli/: entrypoint.py  examples.py
src/pyside2_demo/frontend/example01/: example01.py
src/pyside2_demo/frontend/example02/: example02.py
src/pyside2_demo/frontend/example03/: example03.py
src/pyside2_demo/frontend/example04/: example04.py
src/pyside2_demo/frontend/example05/: example05.py
src/pyside2_demo/frontend/example06/: example06.py
src/pyside2_demo/frontend/example07/: example07.py
src/pyside2_demo/frontend/example08/: example08.py
src/pyside2_demo/internal/: compute.py  utils.py
src/pyside2_demo/internal/cli/: examples.py
src/pyside2_demo/internal/views/: common.py
src/pyside2_demo/internal/views/examples/: example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py  example08.py
src/pyside2_demo/resource/: tw-2330.csv
