[aliases]
test=pytest

[flake8]
max-line-length=120
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
per-file-ignores =
    __init__.py:F401

[metadata]
name = pyside2_demo
version = attr: pyside2_demo.__version__
url = https://github.com/chihyi-liao/pyside2_demo/
author = ChiHyi Liao
author_email = chihyi.liao@gmail.com
description = pyside2_demo is a set of GUI demo by PySide2
long_description = file: README.md
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
include_package_data = True
zip_safe = False
install_requires =
    PySide2~=5.15.2
    click~=8.0.3

[options.packages.find]
where = src
exclude = tests

[options.package_data]
pyside2_demo =
    resources/*

[options.entry_points]
console_scripts =
    pyside2_demo = pyside2_demo:main

[bdist_wheel]
universal = 0
